--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@ body{margin: 0 0; background-color: #f0f0f0;}
 .content{
 	padding: 20px 15px 20px 15px;
 	/*background-color: white;*/
-	margin: 0 150px 20 150px;
+	margin: 0 100px 20 100px;
 	/*border: 1px solid #dcdcdc;*/
-	height: 650px;
+	/*height: 650px;*/
 }
 .content_divider{
 	padding-top: 20px;
@@ -64,6 +64,77 @@ li a:hover {
 	padding: 8px;
 	border-left: 5px solid #2f4c4a;
 	color: white;
+}
+
+.kolom{
+	position: relative;
+	width: 97.5%;
+	float: left;
+	margin: 10px 10px;
+	border: 1px solid #e5e7e6;
+	border-radius: 5px;
+	background-color: white;
+	/*box-shadow: 1px 1px 1px grey;*/
+}
+.kolom p{
+	font-size: 12px;
+	font-weight: bold;
+	color: #666666;
+}
+.kolom h3{
+	font-weight: lighter;
+	color: #666666;
+}
+.image{
+	width: 100%;
+}
+@media (max-width: 1023px) {
+	.content{
+		padding: 20px 15px 20px 15px;
+		margin: 0 10px 20 10px;
+	}
+}
+@media (min-width: 320px) {
+	.kolom{
+		position: relative;
+		width: 97.5%;
+		float: left;
+		margin: 10px 10px;
+		border: 1px solid #e5e7e6;
+	border-radius: 5px;
+	background-color: white;
+	}
+	.image{
+		width: 100%;
+	}
+}
+@media (min-width: 800px) {
+	.kolom{
+		position: relative;
+		width: 47%;
+		float: left;
+		margin: 10px 10px;
+		border: 1px solid #e5e7e6;
+	border-radius: 5px;
+	background-color: white;
+	}
+	.image{
+		width: 100%;
+	}
+}
+@media (min-width: 1110px) {
+	.kolom{
+		position: relative;
+		width: 22.5%;
+		float: left;
+		margin: 10px 10px;
+		border: 1px solid #e5e7e6;
+	border-radius: 5px;
+	background-color: white;
+	}
+	.image{
+		width: 100%;
+	}
 }
 
 .kolom100{
